--- a/src/App.css
+++ b/src/App.css
@@ -15,4 +15,8 @@ body {
   grid-template-columns: 2fr 10fr;
 }
 
+.app-wrapper-content {
+  grid-area: c;
+  background-color: rgb(35, 38, 43);
 
+}
