--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -6,10 +6,10 @@
   }
 
 a {
-    color:white;
+  color:rgb(203, 212, 219);
     text-decoration: none;
   }
 
 .active {
-    color:gold
+  color: rgb(255, 132, 132);
   }
