--- a/src/components/Dialogs/Dialogs.module.css
+++ b/src/components/Dialogs/Dialogs.module.css
@@ -5,15 +5,15 @@
 
 .dialogsItems {
     padding: 10px;
-    color: rgb(203, 212, 219);
+    color: aliceblue;
 
 }
 
 .dialogsItems .active {
-    color: rgb(255, 132, 132);
+    color: crimson;
 }
 
 .messages {
     padding: 10px;
-
+    color: aliceblue;
 }
