--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,7 @@ body {
 
   grid-template-areas:
     "h h"
-    "n c";
+    "nav c";
 
   grid-template-rows: 100px 1fr;
   grid-template-columns: 2fr 10fr;
