--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -1,5 +1,5 @@
 .nav {
-    grid-area: n;
+    grid-area: nav;
     background-color: #101010;
     padding: 20px
   
@@ -12,4 +12,9 @@ a {
 
 .active {
   color: crimson;
+  }
+
+  .dices {
+    background-color: #101010;
+    padding-top: 50px;
   }
